[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Levels/Control_Flow/3 - Intro to For Loops.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallLoop.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/LoopBlock.tscn" type="PackedScene" id=15]

[node name="3 - Intro to For Loops" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="Grid" parent="." instance=ExtResource( 11 )]

[node name="Robot" parent="Grid" instance=ExtResource( 12 )]

[node name="Door" parent="Grid" instance=ExtResource( 5 )]

[node name="Button1" parent="Grid" instance=ExtResource( 13 )]

[node name="Button2" parent="Grid" instance=ExtResource( 13 )]

[node name="Button3" parent="Grid" instance=ExtResource( 13 )]

[node name="Button4" parent="Grid" instance=ExtResource( 13 )]

[node name="Level Control" parent="." instance=ExtResource( 4 )]

[node name="IDE" parent="." instance=ExtResource( 9 )]

[node name="Scopes" parent="IDE" index="0"]
margin_top = 0.0
margin_bottom = 950.0

[node name="ButtonContainer" parent="IDE" index="1"]
margin_top = 954.0
margin_bottom = 1074.0

[node name="Loop1" parent="IDE" instance=ExtResource( 15 )]
margin_left = 0.0
margin_top = 1078.0
margin_right = 480.0
margin_bottom = 1316.0

[node name="Counter" parent="IDE/Loop1/HighlightControl" index="2"]
maxBlocks = 3

[node name="CodeBlockBar" parent="." instance=ExtResource( 14 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 10 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 2 )]

[node name="Call_Loop1" parent="CodeBlockBar" instance=ExtResource( 7 )]

[node name="TextBox" parent="." instance=ExtResource( 3 )]

[node name="PopupMenu" parent="." instance=ExtResource( 8 )]

[editable path="IDE"]
[editable path="IDE/Scopes/Main/Main"]
[editable path="IDE/Loop1"]
